[package]
name = "blockchain"
version = "0.1.0"
authors = ["Wuelle <simon.wuelker@arcor.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.11"
log = "0.4"
crossbeam = "0.8"
rsa = "0.3.0"
sha2 = "0.9.2"
rand = "0.7.3"
